# whatsapp-sender

./: LICENSE  README.md  base.xlsx  base_read_write.py  compile.bat  config.cfg  devices.py  main.py  message-text.txt  pyproject.toml  requirements.txt  text_randomaizer.py  utils.py
uiautomator2/: __init__.py
