[tool.poetry]
name = "whatsapp-sender"
version = "0.1.0"
description = ""
authors = ["ivan <ivaneev.ivane@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
uiautomator2 = "^2.16.25"
weditor = "^0.7.2"
pure-python-adb = "^0.3.0.dev0"
phonenumbers = "^8.13.26"
openpyxl = "^3.1.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
